Add turbo popup logic code

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="card p-5 rounded col-6">
+<div class="card p-5 rounded">
   <%= form_with(model: post) do |form| %>
     <% if post.errors.any? %>
       <div style="color: red">
