--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<div id="<%= dom_id post %>" class="card p-5 rounded col-6">
+<div id="<%= dom_id post %>" class="card p-5 rounded">
   <p>
     <strong>Title:</strong>
     <%= post.title %>
