--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,7 @@
     </header>
 
     <main class="container py-5">
+      <%= turbo_frame_tag "modal" %>
       <%= yield %>
     </main>
   </body>
