--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,10 +1,14 @@
-<h1>Editing post</h1>
-
-<%= render "form", post: @post %>
-
-<br>
-
-<div>
-  <%= link_to "Show this post", @post %><br>
-  <%= link_to "Back to posts", posts_path %>
-</div>
+<%= turbo_frame_tag "modal" do %>
+  <div class="modal">
+    <h1>Editing post</h1>
+    <%= render "form", post: @post %>
+    <br>
+    <div>
+      <%= link_to "Show this post", @post %> |
+      <%= link_to "Cancel", "#", data: {
+        controller: "modals",
+        action: "modals#close"
+      }, class: "cancel-button" %>
+    </div>
+  </div>
+<% end %>
