--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,4 +9,4 @@
   <% end %>
 </div>
 
-<%= link_to "New post", new_post_path %>
+<%= link_to "New post", new_post_path, data: { turbo_frame: "modal" } %>
