--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,8 +1,13 @@
-<h1>New post</h1>
-
-<%= render "form", post: @post %>
-
-<br>
-<div>
-  <%= link_to "Back to posts", posts_path %>
-</div>
+<%= turbo_frame_tag "modal" do %>
+  <div class="modal">
+    <h1>New post</h1>
+    <%= render "form", post: @post %>
+    <br>
+    <div>
+      <%= link_to "Cancel", "#", data: {
+        controller: "modals",
+        action: "modals#close"
+      }, class: "cancel-button" %>
+    </div>
+  </div>
+<% end %>
