--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -30,7 +30,7 @@ a {
   text-decoration: none !important;
 }
 
-.modal {
+.popup {
    position: fixed;
    z-index: 1;
    padding: 2em;
@@ -44,7 +44,7 @@ a {
    box-shadow: 0 0 10px 0 rgba(0,0,0,0.2), 0 5px 10px 0 rgba(0,0,0,0.19);
 }
 
-.cancel-button {
+.cancel {
    background-color: #1530ff;
    font-size: 12px;
    color: white;
